# regulus

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakePresetsBase.json  Cargo.toml
.cargo/: config.toml
.cursor/rules/: brief-answer-ask-mode.mdc  verifying-cpp-code.mdc  verifying-rust-code.mdc
cpp/: CMakeLists.txt  CMakePresets.json  CMakePresetsBase.json  vcpkg.json
cpp/cmake/: compiler_flags.cmake  import_rcore_target.cmake  installation.cmake
cpp/src/: CMakeLists.txt
cpp/src/ccore/: CMakeLists.txt  ccore.cpp
cpp/src/ccore/ccore/: ccore.hpp
cpp/src/playground_tests/: CMakeLists.txt  main.cpp  test_ccore.cpp
cpp/vcpkg_scripts/toolchains/: clang-22-toolchain-aarch64.cmake  clang-22-toolchain.cmake
cpp/vcpkg_scripts/triplets/: aarch64-linux-clang-20.cmake  aarch64-linux-clang-22.cmake  x64-linux-clang-22.cmake
docs/: linker_issues.md  linux_system_prerequisties.md
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/ccore_bridge/: build.rs
rust/ccore_bridge/src/: lib.rs
rust/rcore/: build.rs
rust/rcore/src/: lib.rs  tracing_facade.rs
rust/rerun_playground/: Cargo.toml
rust/rerun_playground/examples/: iq_constellation.rs  simple_sine_carrier.rs
rust/src/build_utils/: Cargo.toml
rust/src/build_utils/src/: lib.rs
rust/src/ccore_bridge/: Cargo.toml  build.rs
rust/src/ccore_bridge/src/: lib.rs
rust/src/rcore/: Cargo.toml  build.rs
rust/src/rcore/src/: lib.rs
rust/src/rerun_playground/: Cargo.toml
